--- a/app/views/shop.ejs
+++ b/app/views/shop.ejs
@@ -15,15 +15,12 @@
 
         <ul>
             <!-- todo - Dynamiser cette liste -->
-            <li>
-                <a href="/category/1"> Catégorie 1 </a>
-            </li>
-            <li>
-                <a href="/category/2"> Catégorie 2 </a>
-            </li>
-            <li>
-                <a href="/category/3">Catégorie 3</a>
-            </li>
+            <% categories.forEach( category => { %>
+                <li>
+                    <a href="/category/<%= category.id %>"> <%= category.name %> </a>
+                </li>
+                
+            <% }); %>
         </ul>
     </div>
 
@@ -31,43 +28,18 @@
         <div class="products text-center">
 
             <!-- todo - dynamiser cette liste -->
-
-            <div class="product">
-                <a href="/product/1">
-                    <img src="img/macbook-pro.png" alt="Nom du produit" />
-                </a>
-                <a href="/product/1">
-                    <div class="product-name">Nom du Produit</div>
-                </a>
-                <div class="product-price">2500€</div>
-            </div>
-
-            <div class="product">
-                <a href="/product/2">
-                    <img
-                        src="img/macbook-pro-laravel.png"
-                        alt="Nom du produit"
-                    />
-                </a>
-                <a href="/product/2">
-                    <div class="product-name">Nom du Produit</div>
-                </a>
-                <div class="product-price">3750€</div>
-            </div>
-
-            <div class="product">
-                <a href="/product/3">
-                    <img
-                        src="img/macbook-pro-laravel.png"
-                        alt="Nom du produit"
-                    />
-                </a>
-                <a href="/product/3">
-                    <div class="product-name">Nom du Produit</div>
-                </a>
-                <div class="product-price">12540€</div>
-            </div>
-
+            <% products.forEach(product => { %>
+                <div class="product">
+                    <a href="/product/<%= product.id %>">
+                        <img src="<%= product.image %>" alt="<%= product.title %>" />
+                    </a>
+                    <a href="/product/<%= product.id %>">
+                        <div class="product-name"> <%= product.title %> </div>
+                    </a>
+                    <div class="product-price"> <%= product.price %>€ </div>
+                </div>
+                
+            <% }); %>
         </div>
     </div>
 </div>
